k8s/localisation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localisation-service
  namespace: localisation-ns
spec:
  selector:
    app: localisation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
