k8s/maintenance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance-service
  namespace: maintenance-ns
spec:
  selector:
    app: maintenance-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
