k8s/vehicule-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicule-service
  namespace: vehicule-ns
spec:
  selector:
    app: vehicule-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
