k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ingress
  namespace: vehicule-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vehicule.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vehicule-service
            port:
              number: 80
  - host: conducteur.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conducteur-service
            port:
              number: 80
  - host: maintenance.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maintenance-service
            port:
              number: 80
  - host: localisation.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: location-service
            port:
              number: 80
  - host: evenement.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: evenement-service
            port:
              number: 80
